# pyflow

./: .gitignore  11-Introduction.md  12-Overview.md  13-Motivation.md  14-Principles.md  15-PrinciplesCont.md  16-TipsOnSoftwareDesign.md  20-Idiomatic.md  21-Generators.md  22-Decorators.md  23-Itertools.md  24-Collections.md  25-Functools.md  26-Slots.md  27-Exceptions.md  28-Metaclasses.md  29-Descriptiors.md  30-Safe.md  31-Testing.md  32-Refactoring.md  33-Docs.md  34-Antipatterns.md  35-DesignPatterns.md  36-TypeHints.md  37-Data.md  37-DataOrientedProgramming.md  38-TypeHintsBackground.md  39-TypeHintsExtra.md  40-Lifecycle.md  41-CodeOrganization.md  42-CodeQuality.md  43-PEP-518-pyproject.md  50-Performance.md  51-Numpy.md  52-Multiprocessing.md  53-Joblib.md  60-Misc.md  LICENSE  Notes.md  README.md  (+2 more)
Extra/: Notes.md
Live/: cm.py  live1.ipynb  live2.ipynb
chapters/: DesignPatterns.md  Idiomatic.md  Lifecycle.md  Safe.md
notebooks/: ClassDecorators.ipynb  Collections.ipynb  CollectionsABC.ipynb  ContextManager.ipynb  DataModelAttributeMagic.ipynb  DataModelAugmentedAssignment.ipynb  DataModelChecks.ipynb  DataModelComparison.ipynb  DataModelInitialization.ipynb  DataModelItemAccess.ipynb  DataModelOperatorMagic.ipynb  DataModelOverview.ipynb  DataModelStringMagic.ipynb  DataModelTypeConversions.ipynb  DatamodelUnary.ipynb  Decorators.ipynb  Descriptors.ipynb  Exceptions.ipynb  FlowControl.ipynb  FunctionalAspects.ipynb  Generators.ipynb  HelloNumpy.ipynb  Interfaces.ipynb  Iterators.ipynb  Joblib.ipynb  Magic_Methods_Part_1.ipynb  (+11 more)
sampleproj/: pyproject.toml
(+163 files in other folders)
