[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]

# "dynamic" is deferred to the build tool to figure out
#
# > For example: many build backends can read the version from a __version__
# > attribute in your code, a Git tag, or similar. In such cases, you should
# > mark the field as dynamic using, e.g.,

name = "spam-eggs"
dynamic = ["version"] # or: version = "0.1.0"
requires-python = ">= 3.8"
dependencies = [
  "httpx",
  "gidgethub[httpx]>4.0.0",
  "django>2.1; os_name != 'nt'",
  "django>2.0; os_name == 'nt'",
]

[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]